--- a/src/app.scss
+++ b/src/app.scss
@@ -1,13 +1,13 @@
-.app {
-    background: rgb(204, 73, 73);
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+        'Helvetica Neue', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
 
-    button {
-        width: 100%;
-        background: orange;
-        font-size: 2rem;
-    }
-
-    .header {
-        font-size: 16tpx;
-    }
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
